Use semantic_group id in place of link group index
